fix inconsistent width on mobile, use different cursor on hover

--- a/src/style.scss
+++ b/src/style.scss
@@ -87,3 +87,8 @@ pre {
 .is-not-feeling-so-good {
 	opacity: 0.3;
 }
+
+.stable-tile {
+	display: flex;
+	cursor: not-allowed;
+}
